# siora

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  ruff.toml
app/: auth.py  calendar_api.py  chat.py  config.py  database.py  db.py  google.py  google_api.py  main.py  models.py  schemas.py  security.py  utils.py
app/routers/: auth.py  chat.py  events.py
app/utils/: llm.py  nlp.py
