[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "google-api-python-client>=2.183.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.37.0",
]
